[package]
name = "commit"
version = "0.7.0"
edition = "2021"
homepage = "https://github.com/alt-art/commit"
repository = "https://github.com/alt-art/commit"
documentation = "https://github.com/alt-art/commit/wiki"
description = "A tool to make patterned (conventional) commit messages"
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "commit","message", "conventional"]
authors = ["Pedro H. M. <pedromendescraft@gmail.com>"]
readme = "README.md"
license = "MIT"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
str_to_string = "warn"
module_name_repetitions = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
inquire = "0.6.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0.80"

[dev-dependencies]
assert_fs = "1.1.1"
serial_test = "3.0.0"

[package.metadata.deb]
name = "commit"
maintainer = "Pedro Henrique Mendes <pedromendescraft@gmail.com>"
copyright = "2020, Pedro Henrique Mendes <pedromendescraft@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "A tool to make patterned (conventional) commit messages and customize the commit pattern"
depends = "git"
section = "utils"
priority = "optional"
assets = [
  # Binary
  ["target/release/commit", "/usr/bin/", "111"],
]

[package.metadata.generate-rpm]
assets = [
  # Binary
  { source = "target/release/commit", dest = "/usr/bin/commit", mode = "111" },
]

[package.metadata.generate-rpm.requires]
git = "*"
